1. added more board tests Final commit Ivan before deadline